--- a/react/assignment10/src/App.css
+++ b/react/assignment10/src/App.css
@@ -4,3 +4,58 @@
   text-align: center;
   padding: 10px;
 }
+a {
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+  background-color: rgb(155, 201, 185);
+}
+a:hover {
+  text-decoration: none;
+  color: whitesmoke;
+  padding: 10px;
+  background-color: rgb(45, 76, 65);
+}
+li {
+  display: inline-block;
+  width: 100px;
+  list-style: none;
+  background-color: rgb(155, 201, 185);
+  padding: 10px;
+}
+.nav {
+  text-align: center;
+
+  padding: 0;
+}
+h1 {
+  text-align: center;
+}
+p,
+.form {
+  text-align: center;
+}
+input {
+  text-align: center;
+  margin: 10px;
+  width: 20%;
+}
+textarea {
+  width: 30%;
+  height: 100px;
+  text-align: center;
+}
+
+.formLabel {
+  display: block;
+  text-align: center;
+  margin: 5px;
+}
+.foot {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  height: 100px;
+  color: antiquewhite;
+  background-color: rgb(45, 76, 65);
+}
